# aoc

./: .clang-format  .gitmodules  CMakeLists.txt
include/: solutions.hpp
include/common/: matrix_2d.hpp  matrix_nd.hpp  utils.hpp  vector_2d.hpp
src/common/: runner.cpp
src/year2021/: main.cpp
src/year2021/day01/: solution.cpp
src/year2022/: main.cpp
src/year2023/: main.cpp
src/year2023/day01/: solution.cpp
src/year2023/day02/: solution.cpp
src/year2023/day03/: solution.cpp
src/year2023/day04/: solution.cpp
src/year2023/day05/: solution.cpp
src/year2023/day06/: solution.cpp
src/year2023/day07/: solution.cpp
src/year2023/day08/: solution.cpp
src/year2023/day09/: solution.cpp
src/year2023/day10/: solution.cpp
src/year2023/day11/: solution.cpp
src/year2023/day12/: solution.cpp
src/year2023/day13/: solution.cpp
src/year2023/day14/: solution.cpp
src/year2023/day15/: solution.cpp
src/year2023/day16/: solution.cpp
src/year2023/day17/: solution.cpp
src/year2023/day18/: solution.cpp
src/year2023/day23/: solution.cpp
